<resources>
    <string name="app_name">PassManager</string>
    <string name="areYouSureYouWantToDeleteThisValue">Willst du diesen eintrag wirklich löschen</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="bio_login">BIO Login</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="edit">Edit</string>
    <string name="website">Website</string>
    <string name="add_new_password">Add new Password</string>
    <string name="generate">Generate</string>
    <string name="number_of_positions">Number of positions</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="delete_button">Delete Button</string>
    <string name="logout">Logout</string>
    <string name="search_button">Search Button</string>
    <string name="add_button">Add Button</string>
</resources>