<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Theme1"
    tools:context=".EditActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/edit"
        android:textColor="@color/Theme5"
        android:textSize="40sp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editUsername"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"
        android:hint="@string/website"
        android:theme="@style/EditTextColor" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"
        android:hint="@string/username"
        android:theme="@style/EditTextColor" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSubmitEdit"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"
        android:hint="@string/password"
        android:theme="@style/EditTextColor" />

    <Button
        android:id="@+id/btnSubmitEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/submit" />

</RelativeLayout>