<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".MainActivity">

    <!--<TextView
        android:id="@+id/displayUsername"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textColor="@color/Theme5"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/toAddButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/Theme1"
        android:scaleType="fitCenter"
        android:src="@drawable/plusicon"
        android:layout_alignParentEnd="true"
        android:textSize="40sp" />

    <TableLayout
        android:id="@+id/TableTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toAddButton"
        android:layout_marginTop="15dp"
        android:stretchColumns="0,1,2,3">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/background_gradient"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/WebsiteColumn"
                android:layout_width="wrap_content"
                android:gravity="start"
                android:text="@string/website"
                android:textColor="@color/Theme5" />

            <TextView
                android:id="@+id/UsernameColumn"
                android:layout_width="wrap_content"
                android:gravity="start"
                android:text="@string/username"
                android:textColor="@color/Theme5" />

            <TextView
                android:id="@+id/PasswordColumn"
                android:layout_width="wrap_content"
                android:gravity="start"
                android:text="@string/password"
                android:textColor="@color/Theme5" />


            <RelativeLayout>
                <ImageButton
                    android:id="@+id/deleteButton"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@color/transparent"
                    android:contentDescription="@string/delete_button"
                    android:scaleType="fitCenter"
                    android:src="@drawable/delete1" />
            </RelativeLayout>


        </TableRow>
    </TableLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/TableTop">

        <TableLayout
            android:id="@+id/Table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2,3">
        </TableLayout>
    </ScrollView>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:stretchColumns="0,1,2,3">

        <TableRow
            android:layout_width="match_parent">

            <ImageButton
                android:id="@+id/delbtnstyle"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/delete" />
        </TableRow>
    </TableLayout>-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/nav">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/panel">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="test"
                        android:textColor="@color/Theme5"
                        android:textSize="30sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="test"
                            android:textColor="@color/Theme5"
                            android:textSize="20sp" />
                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />
                        <ImageButton
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:background="@color/transparent"
                            android:contentDescription="Copy"
                            android:scaleType="fitCenter"
                            android:src="@drawable/copy"
                            android:textSize="40sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="test"
                            android:textColor="@color/Theme5"
                            android:textSize="20sp" />
                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <ImageButton
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:background="@color/transparent"
                                android:contentDescription="Copy"
                                android:scaleType="fitCenter"
                                android:src="@drawable/show"
                                android:textSize="40sp" />
                            <ImageButton
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:background="@color/transparent"
                                android:contentDescription="Copy"
                                android:scaleType="fitCenter"
                                android:src="@drawable/copy"
                                android:textSize="40sp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>-->
            </TableLayout>
        </ScrollView>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp">
        <Button
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:padding="0dp"
            android:background="@color/transparent"
            android:text="@string/logout"
            android:textColor="@color/Theme5"
            tools:ignore="RelativeOverlap"
            android:textSize="20sp" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true">
            <ImageButton
                android:id="@+id/searchBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/transparent"
                android:contentDescription="@string/search_button"
                android:scaleType="fitCenter"
                android:src="@drawable/search"
                android:textSize="40sp" />
            <ImageButton
                android:id="@+id/addBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toEndOf="@id/searchBtn"
                android:background="@color/transparent"
                android:contentDescription="@string/add_button"
                android:scaleType="fitCenter"
                android:src="@drawable/add"
                android:textSize="40sp" />
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>